adding assigment solution

--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "start": "ts-node-dev index.ts",
+    "start": "node ./dist/index.js",
+    "dev": "nodemon index.ts",
     "build": "rm -rf ./dist/* && tsc --build",
     "lint": "eslint . --ext .ts",
-    "prettier": "eslint . --ext .ts --fix",
+    "prettier": "prettier --config .prettierrc 'src/**/*.ts' --write",
     "tsc": "tsc",
     "test": "jasmine-ts"
   },
@@ -18,6 +19,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.14.0",
+    "sharp": "^0.31.1",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.3.5"
   },
@@ -26,6 +28,7 @@
     "@types/express-validator": "^3.0.0",
     "@types/jasmine": "^3.10.2",
     "@types/node": "^16.11.17",
+    "@types/sharp": "^0.31.0",
     "@types/supertest": "^2.0.11",
     "@types/validator": "^13.7.1",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
@@ -34,6 +37,8 @@
     "jasmine": "^3.10.0",
     "jasmine-spec-reporter": "^7.0.0",
     "jasmine-ts": "^0.4.0",
+    "nodemon": "^2.0.20",
+    "prettier": "^2.7.1",
     "supertest": "^6.1.6",
     "ts-node": "^9.1.1"
   }
