--- a/package.json
+++ b/package.json
@@ -15,16 +15,13 @@
   "author": "Elshafeay",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "^4.17.9",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.14.0",
-    "sharp": "^0.31.1",
-    "ts-node-dev": "^1.1.8",
-    "typescript": "^4.3.5"
+    "sharp": "^0.31.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.13",
+    "@types/express": "^4.17.14",
     "@types/express-validator": "^3.0.0",
     "@types/jasmine": "^3.10.2",
     "@types/node": "^16.11.17",
@@ -40,6 +37,8 @@
     "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
     "supertest": "^6.1.6",
-    "ts-node": "^9.1.1"
+    "ts-node": "^9.1.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.8.4"
   }
 }
