--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon index.ts",
     "build": "rm -rf ./dist/* && tsc --build",
     "lint": "eslint . --ext .ts",
-    "prettier": "prettier --config .prettierrc 'src/**/*.ts' --write",
+    "prettier": "eslint . --ext .ts --fix",
     "tsc": "tsc",
     "test": "jasmine-ts"
   },
@@ -18,7 +18,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.14.0",
-    "sharp": "^0.31.1"
+    "sharp": "^0.31.1",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
@@ -37,7 +38,6 @@
     "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
     "supertest": "^6.1.6",
-    "ts-node": "^9.1.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
   }
